# LightRAG

./: .gitignore  .pre-commit-config.yaml  notebook.ipynb  pyproject.toml  requirements.txt
lightrag/: lightrag.py  llm.py  operate.py
lightrag/kg/: neo4j_impl.py  oracle_impl.py
lightrag/node_parser/: markdown_element.py
notebooks/: node_parser.ipynb  query.ipynb  test.ipynb
