[tool.poetry]
name = "lightrag"
version = "0.1.0"
description = "LightRAG: Simple and Fast Retrieval-Augmented Generation"
authors = ["Bruce Shi <shibocuhk@gmail.com>"]
readme = "README.md"
packages = [{ include = "lightrag" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
accelerate = "^1.0.1"
aioboto3 = "^13.2.0"
aiohttp = "^3.10.10"
graspologic = "^3.4.1"
hnswlib = "^0.8.0"
nano-vectordb = "^0.0.4.1"
networkx = "^3.4.2"
ollama = "^0.3.3"
openai = "^1.52.2"
pyvis = "^0.3.2"
tenacity = ">=8.2.0,<9.0.0"
tiktoken = "^0.8.0"
torch = "^2.5.0"
transformers = "^4.46.0"
xxhash = "3.5.0"
llama-index = "^0.11.20"
llama-index-node-parser-topic = "^0.1.0"
llama-index-embeddings-openai = "^0.2.5"
llama-index-agent-openai = "^0.3.4"
llama-index-llms-openai = "^0.2.16"
neo4j = "^5.26.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
